Sutter Health/src/objects/SH_HomePage_carousel__c.object
<CustomObject>
    <fields>
        <fullName>SH_Article_Link__c</fullName>
        <description>For Developer, Admins only</description>
        <inlineHelpText>For Developer, Admins only</inlineHelpText>
        <label>SH_ArticleID_Transform_CODE</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Article_Tool_Id__c</fullName>
        <label>Article/Tool Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Article_Tool__c</fullName>
        <formula>IF(ISBLANK(SH_Article_Tool_Id__c), &apos;&apos;, 
LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) +SH_Article_Tool_Id__c)</formula>
        <label>Article/Tool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Carousel_description__c</fullName>
        <description>This is the description of the title of the headliner image. This description will be visible at the front end portal</description>
        <label>Carousel description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SH_Content_Link__c</fullName>
        <description>This field is used to store internal or external url (must be fully qualified url)</description>
        <inlineHelpText>This field is used to store internal or external url (must be fully qualified url)</inlineHelpText>
        <label>Content Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Content_Target__c</fullName>
        <description>This field is used to open the link in same tab (_self) or in different tab (_blank)</description>
        <inlineHelpText>This field is used to open the link in same tab (_self) or in different tab (_blank)</inlineHelpText>
        <label>Content Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>_self</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>_blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SH_Description__c</fullName>
        <label>Description</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH_Help_Text__c</fullName>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Is_Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Preview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Is_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SH_Order_of_display__c</fullName>
        <label>Order of display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SH_Production_Id__c</fullName>
        <description>stores the production id for the article/Tool (should be removed after copying value in SH_Article_Link__c field and deployment on production)</description>
        <inlineHelpText>stores the production id for the article/Tool</inlineHelpText>
        <label>Production Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Home Page Carousel</label>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Page Carousels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Article_ToolId_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(SH_Article_Tool_Id__c), 
OR(ISPICKVAL(SH_Content_Type__c, &apos;Article&apos;), ISPICKVAL(SH_Content_Type__c, &apos;Tool&apos;)))</errorConditionFormula>
        <errorDisplayField>SH_Article_Tool_Id__c</errorDisplayField>
        <errorMessage>Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Content_Link_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK( SH_Content_Link__c ), ISPICKVAL(SH_Content_Type__c, &apos;Other&apos;))</errorConditionFormula>
        <errorDisplayField>SH_Content_Link__c</errorDisplayField>
        <errorMessage>Content_Link_Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Icon_required_on_publish_preview</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISBLANK( SH_Icon__c ),
 OR( SH_Is_Preview__c,  SH_Is_Publish__c)
)</errorConditionFormula>
        <errorMessage>Please assign icon before publish/preview.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_ArticleTool_ID</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(SH_Article_Tool_Id__c), false, 
OR(NOT(BEGINS(SH_Article_Tool_Id__c , &apos;kA&apos;)), NOT(LEN(SH_Article_Tool_Id__c ) == 15)) 
)</errorConditionFormula>
        <errorDisplayField>SH_Article_Tool_Id__c</errorDisplayField>
        <errorMessage>Invalid Article/Tool ID</errorMessage>
    </validationRules>
</CustomObject>